language/move-lang/tests/move_check/dependencies/friend_cycle_2.move
address 0x2 {

module A {
    friend 0x2::B;
}

module B {
    friend 0x2::A;
}

}
